--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.18.1",
+    "@tanstack/react-query": "^4.29.1",
     "i": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
