--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,7 @@
+# Required
+VITE_APP_GOOGLE_MAPS_API_KEY=
+
 # Optional. Will default to http://localhost:5000
 # Only configure this if you are changing the URL of which the express app is hosted
 VITE_API_URL=
+
