--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
+    "swiper": "^9.2.4",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
