--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.14",
     "@react-google-maps/api": "^2.18.1",
     "@tanstack/react-query": "^4.29.1",
+    "antd": "^5.4.6",
     "i": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
