--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@react-google-maps/api": "^2.18.1",
     "@tanstack/react-query": "^4.29.1",
     "antd": "^5.4.6",
+    "axios": "^1.5.0",
     "i": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,7 +23,10 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
     "swiper": "^9.2.4",
-    "zustand": "^4.3.7"
+    "zustand": "^4.3.7",
+    "@stripe/react-stripe-js": "^2.2.0",
+    "@stripe/stripe-js": "^2.1.2",
+    "stripe": "^13.5.0"
   },
   "devDependencies": {
     "@types/google.maps": "^3.52.5",
