--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,8 @@
 # Required 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL=
+STRIPE_SECRET_KEY=
 
 # Leave blank to default port to 5000
 PORT=
+# Defalts to http://localhost:5173
+RETURN_URL=
