--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@prisma/client": "^5.2.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "stripe": "^13.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
