SE-24: added printer component for clover api

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,7 @@
 # Required
 VITE_APP_GOOGLE_MAPS_API_KEY=
 STRIPE_PUBLIC_KEY=
+REACT_APP_CLOVER_PRINTER_API_TOKEN=
 
 # Optional. Will default to http://localhost:5000
 # Only configure this if you are changing the URL of which the express app is hosted
