--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@react-google-maps/api": "^2.18.1",
+    "@stripe/react-stripe-js": "^2.2.0",
+    "@stripe/stripe-js": "^2.1.2",
     "@tanstack/react-query": "^4.29.1",
     "antd": "^5.4.6",
     "axios": "^1.5.0",
@@ -22,11 +24,10 @@
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
+    "stripe": "^13.5.0",
+    "styled-components": "^6.0.8",
     "swiper": "^9.2.4",
-    "zustand": "^4.3.7",
-    "@stripe/react-stripe-js": "^2.2.0",
-    "@stripe/stripe-js": "^2.1.2",
-    "stripe": "^13.5.0"
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@types/google.maps": "^3.52.5",
