--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@react-google-maps/api": "^2.18.1",
     "@tanstack/react-query": "^4.29.1",
     "antd": "^5.4.6",
+    "axios": "^1.5.0",
+    "express-session": "^1.17.3",
     "i": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,7 +22,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^6.15.0",
     "swiper": "^9.2.4",
     "zustand": "^4.3.7"
   },
