--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
     "stripe": "^13.5.0"
   },
   "devDependencies": {
