--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-google-maps/api": "^2.18.1",
     "@stripe/react-stripe-js": "^2.2.0",
     "@stripe/stripe-js": "^2.1.2",
+    "@tailwindcss/forms": "^0.5.6",
     "@tanstack/react-query": "^4.29.1",
     "antd": "^5.4.6",
     "axios": "^1.5.0",
