--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.5.0",
     "express-session": "^1.17.3",
     "i": "^0.3.7",
+    "node-pre-gyp": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
@@ -40,7 +41,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-modal": "^3.13.1",
     "@types/webpack-env": "^1.18.0",
-    "@vitejs/plugin-react-swc": "^3.0.0",
+    "@vitejs/plugin-react-swc": "^3.4.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "prettier": "^3.0.3",
