--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,7 +1,11 @@
+##### Copy this file to frontend/.env and fill in the values below
+##### Remember any env variables need to be prefixed by VITE_* to be used in the frontend
+
 # Required
-VITE_APP_GOOGLE_MAPS_API_KEY=
-STRIPE_PUBLIC_KEY=
-REACT_APP_CLOVER_PRINTER_API_TOKEN=
+VITE_GOOGLE_MAPS_API_KEY=
+VITE_STRIPE_PUBLIC_KEY=
+VITE_CLOVER_PRINTER_API_TOKEN=
+VITE_CLOVER_MERCHANT_ID=
 
 # Optional. Will default to http://localhost:5000
 # Only configure this if you are changing the URL of which the express app is hosted
