rebasing to merge main

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,10 +3,10 @@
 
 # Required
 
-VITE_APP_GOOGLE_MAPS_API_KEY=
-STRIPE_PUBLIC_KEY=
-VITE_APP_CLOVER_PRINTER_API_TOKEN=
-VITE_APP_CLOVER_MERCHANT_ID=
+VITE_GOOGLE_MAPS_API_KEY=
+VITE_STRIPE_PUBLIC_KEY=
+VITE_CLOVER_PRINTER_API_TOKEN=
+VITE_CLOVER_MERCHANT_ID=
 
 # Optional. Will default to http://localhost:5000
 # Only configure this if you are changing the URL of which the express app is hosted
