--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,12 @@
     "@tanstack/react-query": "^4.29.1",
     "antd": "^5.4.6",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
     "express-session": "^1.17.3",
     "i": "^0.3.7",
     "node-pre-gyp": "^0.17.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
