--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@stripe/react-stripe-js": "^2.3.1",
-    "@stripe/stripe-js": "^2.1.7"
+    "@stripe/stripe-js": "^2.1.7",
+    "react-spinners": "^0.13.8"
   }
 }
