--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.15.0",
+    "react-spinner": "^0.2.7",
     "stripe": "^13.9.0",
     "styled-components": "^6.0.8",
     "swiper": "^9.2.4",
