add images to payment-result page

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,5 +4,5 @@ STRIPE_SECRET_KEY=
 
 # Leave blank to default port to 5000
 PORT=
-# Defalts to http://localhost:5173
+# Defaults to http://localhost:5173
 RETURN_URL=
