--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.2",
     "express-session": "^1.17.3",
     "i": "^0.3.7",
+    "js-cookie": "^3.0.5",
     "node-pre-gyp": "^0.17.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@types/google.maps": "^3.52.5",
+    "@types/js-cookie": "^3.0.4",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
