--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.8",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^18.15.11",
     "nodemon": "^2.0.22",
     "prisma": "^5.2.0",
