--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,14 @@
-# Required 
+##### REQUIRED ######
 DATABASE_URL=
 STRIPE_SECRET_KEY=
 
-# Leave blank to default port to 5000
+###### OPTIONAL ######
+# Defaults to 5000
 PORT=
 # Defaults to http://localhost:5173
 RETURN_URL=
+ORIGIN=
+# Defaults to I2DuwJ5wBrgJH2Ew
+SESSION_SECRET=
+# Defaults to development
+NODE_ENV=
