remove old empty cart images, change env for email auth

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,8 @@
 ##### REQUIRED ######
 DATABASE_URL=
 STRIPE_SECRET_KEY=
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
 
 ###### OPTIONAL ######
 # Defaults to 5000
