--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,6 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@mui/material": "^5.14.12",
-    "@react-google-maps/api": "^2.18.1",
     "@stripe/react-stripe-js": "^2.2.0",
     "@stripe/stripe-js": "^2.1.2",
     "@tailwindcss/forms": "^0.5.6",
@@ -25,6 +24,7 @@
     "express-session": "^1.17.3",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
     "node-pre-gyp": "^0.17.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
+    "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.15.0",
     "react-spinner": "^0.2.7",
@@ -44,8 +45,8 @@
     "zustand": "^4.3.7"
   },
   "devDependencies": {
-    "@types/google.maps": "^3.52.5",
     "@types/js-cookie": "^3.0.4",
+    "@types/leaflet": "^1.9.7",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
