#174, #179, #180 create image updating system for menu photos and some minor bug fixes

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,9 @@ DATABASE_URL=
 STRIPE_SECRET_KEY=
 EMAIL_USERNAME=
 EMAIL_PASSWORD=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
 
 ###### OPTIONAL ######
 # Defaults to 5000
