--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@prisma/client": "^5.4.2",
     "@types/nodemailer": "^6.4.13",
     "bcrypt": "^5.1.1",
