--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "antd": "^5.4.6",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "cloudinary": "^1.41.0",
     "express-session": "^1.17.3",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
