--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^2.3.1",
     "@stripe/stripe-js": "^2.1.7",
+    "cloudinary": "^1.41.0",
     "react-spinners": "^0.13.8"
   }
 }
