--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -5,6 +5,8 @@
 VITE_STRIPE_PUBLIC_KEY=
 VITE_CLOVER_PRINTER_API_TOKEN=
 VITE_CLOVER_MERCHANT_ID=
+VITE_TAX_RATE=
+VITE_TURNSTILE_SITE_KEY=
 
 # Optional. Will default to http://localhost:5000
 # Only configure this if you are changing the URL of which the express app is hosted
