--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "stripe": "^13.9.0",
     "styled-components": "^6.0.8",
     "swiper": "^9.2.4",
+    "tailwind-merge": "^2.0.0",
     "tailwindcss-animated": "^1.0.1",
     "validator": "^13.11.0",
     "zustand": "^4.3.7"
