convert images to .webp, change image gallery aspect ratios

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,7 +13,7 @@ CLOUDINARY_API_SECRET=
 PORT=
 # Defaults to http://localhost:5173
 RETURN_URL=
-ORIGIN=
+ORIGIN_URL=
 # Defaults to I2DuwJ5wBrgJH2Ew
 SESSION_SECRET=
 # Defaults to development
