--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.11.0",
+    "@esbuild/win32-x64": "^0.19.5",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@marsidev/react-turnstile": "^0.3.2",
@@ -20,6 +21,7 @@
     "@tanstack/react-query": "^4.29.1",
     "axios": "^1.5.0",
     "cloudinary": "^1.41.0",
+    "esbuild": "^0.19.5",
     "express-session": "^1.17.3",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
