--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "zustand": "^4.3.7"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@types/leaflet": "^1.9.7",
