--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@stripe/stripe-js": "^2.1.2",
     "@tailwindcss/forms": "^0.5.6",
     "@tanstack/react-query": "^4.29.1",
+    "@testing-library/user-event": "^14.5.1",
     "axios": "^1.5.0",
     "cloudinary": "^1.41.0",
     "express-session": "^1.17.3",
