--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,8 @@
     "zustand": "^4.3.7"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.96",
     "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
